Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4796

Qt's QTemporaryFile isn't unicode-safe on Windows

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.6.0
    • Core: I/O
    • None
    • c728783dc20cc2d4667affdefa19a4162a2ec9ef

    Description

      Some KDE users reported problems when using a MS Windows account name with non-latin characters (japanese, chinese etc.)

      "One big reason why it doesn't work is because Qt's QTemporaryFile isn't
      unicode-safe on windows. See qtemporaryfile.cpp:352

      char *filename = qstrdup(qfilename.toLocal8Bit());

      This doesn't work when the locale doesn't contain the used characters.
      And since we're storing all KTemporaryFile's in the user home dir this
      is a very big problem..."

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            biochimia João Abecasis
            sthomass Stian Sandvik Thomassen (closed Nokia identity) (Inactive)
            Votes:
            12 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes