Split argument validation of _gettemp as separate function

This removes knowledge about the structure of the filename template from
the randomization process and is a pre-requisite to adding Unicode
support to the code.

Task-number: QTBUG-4796
Reviewed-by: Robin Burchell